                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2020-09-29
 * Fulltext searches below 3 characters are off limits unless you change innodb_ft_min_token_size, which isn't always possible or desirable. Therefore wing generated classes now add a non-fulltext index in addition to the fulltext one so that you can do substring searches on that as well.

2020-09-28
 * Fixed: When a captcha answer is 0 it always fails.
 * Added better sorting of fulltext fields for generated rest classes.
 * Updated trends page to use bootstrap vue components instead of flatpickr.
 * Added CSV export to trends page.

2020-09-25
 * Fulltext queries generated by Rest generate_relationship are merged into a single query rather than being "OR"ed together.
 * The debounce time on wing_object().search has been changed from 200 to 500 ms. There is now search_fast() if you still want to go 200ms.
 * The wing-pagination component has been changed to use search_fast().

2020-09-24
 * Added "fulltextquery" as a key in Rest named_options. Use it instead of "queryable" to perform a MySQL MATCH() AGAINST() fulltext instead of a typical LIKE substring search. Note that you'll need a fulltext index for that field in order to use this option. 
 * Converted ideas to fulltext search.
 * Converted wing class --add to make the "name" field a fulltext index by default.

2020-09-21
 * Changed check_privilege_method to log on debug instead of warn.
 * Rest claasses no longer do full text searches as they simply don't scale due to full table scans.

2020-09-16
 * Minor change to Wing::DB::Result->check_privilege_method so that it returns a 1 instead of the result of the called method if it passes it's checks. It's just checking for truthiness not specfically a 1.

2020-09-13